# quan_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  alembic.ini  pyproject.toml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/zh/content/: 安全考虑.md  开发指南.md  开发者指南.md  故障排查.md  测试策略.md  监控与可观测性.md  部署与运维.md  配置管理.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
apps/api/: __init__.py  deps.py  main.py
apps/api/routers/: __init__.py  admin_ingestion.py  data_status.py  forecast.py  fundamentals.py  instruments.py  markets.py  portfolio.py  scheduler.py
apps/quant-admin-mcp/: __init__.py  server.py  tools.py
apps/quant-read-mcp/: __init__.py  db_backends.py  server.py  tools.py
apps/scheduler/: __init__.py  executor.py  schedule.py
apps/worker/: __init__.py  main.py  tasks.py
configs/: base.yaml  dev.yaml
deploy/: .env.example  README.md  docker-compose.yml  prometheus.yml
readme/: A股美股基金量化Agent_Skill+MCP模块实施规格_V4.md  RESEARCH_BASELINE_RESULTS.md
scripts/: daily_top10_forecast.py  ingest_fundamentals.py  ingest_real_data.py  paper_portfolio.py  register_and_evaluate.py  run_paper_trading.py  run_research_baseline.py  run_self_thinking.py  tune_lightgbm.py
skills/cross-market-quant-research/: SKILL.md
skills/cross-market-quant-research/references/: instrument-id-format.md  model-families.md  no-forecast-reasons.md  report-template.md  risk-layers.md
skills/cross-market-quant-research/scripts/: canonical_id.py  validate_forecast.py  validate_report.py  validate_risk_trace.py
sql/migrations/: env.py
sql/migrations/versions/: 20260715_0001_instruments.py  20260715_0002_audit_events.py  20260715_0003_market_bar.py  20260715_0004_corporate_action.py  20260715_0005_fundamental_fact.py  20260715_0006_fund_fx_portfolio.py  20260715_0007_market_bar_provenance.py  20260715_0008_ca_nav_provenance.py  20260716_0009_closed_loop_persistence.py  20260716_0010_admin_job.py  20260716_0011_model_registry_artifact.py  20260716_0012_strategy_governance.py  20260716_0013_factor_governance.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/golden/cn/: halt_and_up_limit.jsonl  halt_lift_resume.jsonl  split_and_dividend.jsonl
tests/fixtures/golden/fund/: cutoff_and_redemption.jsonl
tests/integration/: __init__.py  test_e2e_pipeline.py
tests/unit/: test_adapter_provenance.py  test_adapter_transforms.py  test_admin_job_durable.py  test_api_health.py  test_audit.py  test_auth_fail_closed.py  test_calendar_rule.py  test_closed_loop_persistence.py  test_corporate_actions.py  test_corporate_actions_extended.py  test_cross_market_scenarios.py  test_execution_models.py  test_families_and_routers.py  test_families_registry.py  test_forecast_service.py  test_fx_cross_currency.py  test_golden_scenarios.py  test_golden_scenarios_more.py  test_ingestion.py  test_ingestion_sql_sink.py  test_instrument_id.py  test_instrument_service.py  test_instruments_router_wired.py  test_isotonic_calibration.py  test_issue_8_admission.py  test_issue_9_target_return.py  test_live_adapters.py  test_mcp_surface.py  test_model_persistence.py  test_observability_metrics.py  test_phase1_governance.py  test_phase1_routers.py  test_phase2_to_5.py  test_phase4_late.py  test_pit_filtering.py  test_promotion_gate.py  test_ranker.py  test_regime.py  test_report_channels.py  test_response_envelope.py  (+17 more)
(+232 files in other folders)
